Stash overflow scroll fix

--- a/_assets/stylesheets/_base.scss
+++ b/_assets/stylesheets/_base.scss
@@ -549,7 +549,6 @@ h4 {
   height: 0; /* Avoid second scroll bar in Chrome! */
   visibility: hidden;
   z-index: 400;
-  overflow: hidden;
 }
 
 .content.content--show {
